--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
-    "lodash": "^4.17.21",
+    "@kaiachain/ethers-ext": "2.0.1",
+    "@kaiachain/web3js-ext": "2.0.1",
     "loader-utils": "3.2.1",
+    "lodash": "^4.17.21",
+    "querystring": "^0.2.1",
+    "querystring-es3": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
     "react-router": "^7.1.1",
-    "@kaiachain/web3js-ext": "2.0.1",
-    "@kaiachain/ethers-ext": "2.0.1"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.13.10",
     "@types/lodash": "^4.17.14",
+    "@types/node": "^22.13.10",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
     "typescript": "4.4.4"
